  - add calculate_cache_entry_index support
  - implement libfdata_list_read_buffer and libfdata_list_seek_offset ?
  - add a function to look for data range offset instead of relative list offset
    libfdata_list_get_element_value_at_offset ?
  - rename element_offset and equiv to element_data_offset
* range list
  - work in progress
* stream
  - add mapped offset support ?
* tree
  - refactor
  - add mapped offset support ?
  - unload parts of the tree if it becomes too large
* tree node
  - refactor
  - add mapped offset support ?
  - allow to invalidate sub nodes data range?
* vector
  - add mapped offset support ?
  - refactor
  - write on set value ? what about create ?
  - rename element_offset and equiv to element_data_offset

Optimizations:
* mapped ranges
  - optimize calculations by adding flag to mapped range ?
    LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID

20150412
* worked on btree search flags

20150409
* worked on btree search flags

20150405
* added support for less equal and greater equal for compare functions
  in libfdata_btree_node_get_sub_node_data_range_by_key

20150104
* 2015 update

20141018
* changes for deployment

20141012
* worked on utility scripts

20140920
* changes for project site move

20140915
* worked on btree

20140914
* worked on btree
* worked on tests

20140913
* worked on btree

20140912
* worked on btree
* worked on tests
* worked on fcache integration

20140911
* worked on btree
* worked on tests

20140826
* bug fixes in include header

20140817
* worked on btree

20140809
* worked on vector

20140601
* updated dependencies

20140421
* worked on list

20140206
* changes in vector

20140205
* added libfdata_list_get_element_index_at_offset
* added libfdata_stream_get_segment_at_offset

20140130
* small fix in stream header file

20140126
* list fixed multi file caching issue

20140105
* 2014 update
* updated dependencies

20130929
* worked on tree and tree node
* updated dependencies

20130922
* worked on tree and tree node
